force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__outageFrom__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__outageFrom__c</fullName>
    <inlineHelpText>Use this field to select the date when the service outage begins.</inlineHelpText>
    <label>Outage Start</label>
    <type>DateTime</type>
</CustomField>