force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__outageTo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__outageTo__c</fullName>
    <inlineHelpText>Use this field to select the date when the service outage ends.</inlineHelpText>
    <label>Outage End</label>
    <type>DateTime</type>
</CustomField>