force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__PreferredContactMethod__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PreferredContactMethod__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>