force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Priority_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Priority_ID__c</fullName>
    <formula>BMCServiceDesk__FKPriority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
    <label>Priority~</label>
    <type>Text</type>
</CustomField>