force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Reassigned_Count__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Reassigned_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Displays the number of times a record is reassigned either to a Queue, Staff or both.</inlineHelpText>
    <label>Reassigned Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>