force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__RequestDetailCloneId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RequestDetailCloneId__c</fullName>
    <description>Original service request detail ID that is used to clone the service request</description>
    <inlineHelpText>Original service request detail ID that is used to clone the service request</inlineHelpText>
    <label>Request Detail Clone ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>