force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__respondedDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__respondedDateTime__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the &quot;Actions &gt; Responded&quot; command is run. This field is used to record the date and time when the staff has communicated to the client about the issue reported by the client.</inlineHelpText>
    <label>Responded Date</label>
    <type>DateTime</type>
</CustomField>