force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__RF_FKLayout__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_FKLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the layout for the incident.</description>
    <inlineHelpText>Select the layout for incident.</inlineHelpText>
    <label>Layout Type</label>
    <referenceTo>BMCServiceDesk__ConsoleLayoutDetail__c</referenceTo>
    <relationshipLabel>LayoutIncidents</relationshipLabel>
    <relationshipName>LayoutIncidents</relationshipName>
    <type>Lookup</type>
</CustomField>