force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__RF_LTEC__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_LTEC__c</fullName>
    <description>This field is reserved for internal use.</description>
    <label>LTEC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>