force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__RF_SkipTriggerExecution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_SkipTriggerExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in BETA Feature as a flag to skip Remedyforce trigger execution. True value skips the execution and false will execute the trigger as it is.</description>
    <label>Skip RF Trigger Execution</label>
    <type>Checkbox</type>
</CustomField>