force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Service_Request_Title__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Request_Title__c</fullName>
    <label>Service Request Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>