force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__ShowDueDateDialog__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ShowDueDateDialog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field decides the opening of pop up window for recalculation of due date in case of Standard Forms.</description>
    <label>Show DueDate Dialog</label>
    <type>Checkbox</type>
</CustomField>