force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__timeSpent__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__timeSpent__c</fullName>
    <inlineHelpText>This field has been deprecated and is no longer used in Remedyforce Console.</inlineHelpText>
    <label>Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>