force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__TimeSpentInCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TimeSpentInCurrentStatus__c</fullName>
    <formula>IF( BMCServiceDesk__Clock_Status__c !=$Label.bmcservicedesk__clockstatusstopped,IF(FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440) &gt;=999999999999999,999999999999999, FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total time for which an incident is assigned to the current status. This field does not consider the business hours configured for an organization.</inlineHelpText>
    <label>Time Spent In Current Status (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>