force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Urgency_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
    <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select how quickly the incident needs to be resolved. The urgency and the level of impact are used to calculate the priority of the incident.</inlineHelpText>
    <label>Urgency~</label>
    <type>Text</type>
</CustomField>