force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__WorkflowController__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__WorkflowController__c</fullName>
    <description>This field will be used to initiate and control work-flows and triggers on this object.</description>
    <label>WorkflowController</label>
    <length>20</length>
    <type>Text</type>
</CustomField>