force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <formula>BMCServiceDesk__Approval_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments</label>
    <type>Text</type>
</CustomField>