force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Description_SFEmail__c.field-meta.xml
<CustomField>
    <fullName>Description_SFEmail__c</fullName>
    <inlineHelpText>To be used to customize the body of the SF setup email (by Charles Chang)</inlineHelpText>
    <label>Description_SFEmail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>