force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Due_Date_Progress_Text__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Progress_Text__c</fullName>
    <formula>IF(
ISBLANK(BMCServiceDesk__dueDateTime__c), &quot;No Due Date Set&quot;,
IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__dueDateTime__c &lt; NOW()), &quot;Due date of a record has passed&quot;, IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__Time_Remaining_Percentage__c &gt; 50), &quot;More than 50% of time is remains&quot;, IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__Time_Remaining_Percentage__c &lt;= 50), &quot;Less than or equal to 50% of time remains&quot;, IF(AND(!BMCServiceDesk__state__c, BMCServiceDesk__closeDateTime__c &lt;= BMCServiceDesk__dueDateTime__c), &quot;Due date met&quot;, IF(AND(!BMCServiceDesk__state__c, BMCServiceDesk__closeDateTime__c &gt; BMCServiceDesk__dueDateTime__c), &quot;Due date is not met&quot;, &apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Progress (Text)</label>
    <type>Text</type>
</CustomField>