force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Employee_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mobile_Number__c</fullName>
    <description>Assigned mobile number for employee</description>
    <inlineHelpText>Assigned mobile number for employee</inlineHelpText>
    <label>Employee Mobile Number</label>
    <type>Phone</type>
</CustomField>