force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Employee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Start_Date__c</fullName>
    <label>Employee Start Date</label>
    <type>DateTime</type>
</CustomField>