force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Employees_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employees_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>