force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>