force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>“On Hold” Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>