force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Open_Duration_days__c.field-meta.xml
<CustomField>
    <fullName>Open_Duration_days__c</fullName>
    <formula>IF( ISBLANK(BMCServiceDesk__closeDateTime__c), now() - BMCServiceDesk__openDateTime__c, BMCServiceDesk__closeDateTime__c - BMCServiceDesk__openDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Duration (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>