force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <formula>BMCServiceDesk__openDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>