force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Responded_Date__c</fullName>
    <formula>BMCServiceDesk__respondedDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responded Date</label>
    <type>DateTime</type>
</CustomField>