force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/VIP_User__c.field-meta.xml
<CustomField>
    <fullName>VIP_User__c</fullName>
    <formula>if(BMCServiceDesk__FKClient__r.BMCServiceDesk__VIP__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP User</label>
    <type>Checkbox</type>
</CustomField>