force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Waiting_For_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiting_For_Reason__c</fullName>
    <label>“Waiting For” Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>