force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/APPROVED_status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>APPROVED_status_rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR( 
BMCServiceDesk__Status_ID__c=&quot;1 - NEW&quot;, 
BMCServiceDesk__Status_ID__c=&quot;4 – WAITING FOR CLIENT&quot;, 
BMCServiceDesk__Status_ID__c=&quot;5 - WAITING FOR 3RD PARTY&quot;, 
BMCServiceDesk__Status_ID__c=&quot;6 - WAITING FOR APPROVAL&quot;,
BMCServiceDesk__Status_ID__c=&quot;8 - RESOLVED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CANCELLED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED/NO CONTACT&quot;,
BMCServiceDesk__Status_ID__c=&quot;REJECTED&quot;),
PRIORVALUE( BMCServiceDesk__Status_ID__c )=&quot;9 – APPROVED&quot; 
)</errorConditionFormula>
    <errorMessage>2 - ASSIGNED, 3 – IN PROGRESS, or 7 – ON HOLD are the only allowable status changes from 9 – APPROVED.</errorMessage>
</ValidationRule>