force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/ASSIGNED_status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ASSIGNED_status_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
BMCServiceDesk__Status_ID__c=&quot;1 - NEW&quot;, 
BMCServiceDesk__Status_ID__c=&quot;4 – WAITING FOR CLIENT&quot;, 
BMCServiceDesk__Status_ID__c=&quot;5 - WAITING FOR 3RD PARTY&quot;, 
BMCServiceDesk__Status_ID__c=&quot;8 - RESOLVED&quot;, 
BMCServiceDesk__Status_ID__c=&quot;9 – APPROVED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED/NO CONTACT&quot;,
BMCServiceDesk__Status_ID__c=&quot;REJECTED&quot;),
PRIORVALUE( BMCServiceDesk__Status_ID__c )=&quot;2 - ASSIGNED&quot; 
)</errorConditionFormula>
    <errorMessage>3 – IN PROGRESS, 7 – ON HOLD, OR CANCELLED are the only allowable status changes from 2 - ASSIGNED.</errorMessage>
</ValidationRule>