force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Cannot_Update_Closed_Incident.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Cannot_Update_Closed_Incident</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISCHANGED(BMCServiceDesk__RF_HasAttachments__c)), NOT(ISCHANGED(BMCServiceDesk__Is_New_Record__c)), NOT( BMCServiceDesk__state__c ) , NOT( PRIORVALUE( BMCServiceDesk__state__c ) ), NOT(ISNEW()) ,NOT( ISCHANGED( BMCServiceDesk__Total_Duration__c ) ), NOT( ISCHANGED( BMCServiceDesk__Feedback__c ) ), NOT( ISCHANGED( BMCServiceDesk__Compliments_and_Complaints__c ) ), NOT(ISCHANGED( BMCServiceDesk__Feedback_Last_Submitted__c)),NOT(ISCHANGED( BMCServiceDesk__FKBroadcast__c)),NOT(AND(ISCHANGED(BMCServiceDesk__dueDateTime__c),NOT(BMCServiceDesk__state__c), (LastModifiedDate  -  BMCServiceDesk__closeDateTime__c) &lt; 0.0003 , (LastModifiedDate  -  BMCServiceDesk__closeDateTime__c) &gt; -0.1 )),NOT( ISCHANGED( BMCServiceDesk__RF_TimeToClose__c ) ))</errorConditionFormula>
    <errorMessage>This incident is closed. Reopen the incident to modify it.</errorMessage>
</ValidationRule>