force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Check_OutageStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Check_OutageStartDate</fullName>
    <active>true</active>
    <description>Outage Start Date is required.</description>
    <errorConditionFormula>And(NOT(OR(ISNULL(BMCServiceDesk__outageTo__c),ISBLANK(BMCServiceDesk__outageTo__c))),OR(ISNULL(BMCServiceDesk__outageFrom__c),ISBLANK(BMCServiceDesk__outageFrom__c)))</errorConditionFormula>
    <errorMessage>Outage Start Date is required.</errorMessage>
</ValidationRule>