force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Check_OutageToDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Check_OutageToDate</fullName>
    <active>true</active>
    <description>This rule is used to make sure that Outage End Date comes always after Outage Start Date.</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__outageTo__c),ISBLANK(BMCServiceDesk__outageTo__c) ) ), BMCServiceDesk__outageTo__c &lt;= BMCServiceDesk__outageFrom__c )</errorConditionFormula>
    <errorMessage>Outage End Date must be later than Outage Start Date</errorMessage>
</ValidationRule>