force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Follow_up_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Follow_up_date_required</fullName>
    <active>true</active>
    <description>IF Follow_up is checked. Follow_up_Date is required</description>
    <errorConditionFormula>IF(BMCServiceDesk__followUp__c==TRUE,
OR( ISBLANK(BMCServiceDesk__followUpDateTime__c) , ISNULL(BMCServiceDesk__followUpDateTime__c)) 
,FALSE)</errorConditionFormula>
    <errorMessage>Please enter the Follow Up Date.</errorMessage>
</ValidationRule>