force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__followUpDateTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__followUpDateTimeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__followUpDateTime__c),ISBLANK(BMCServiceDesk__followUpDateTime__c) ) ), BMCServiceDesk__followUpDateTime__c &lt; BMCServiceDesk__closeDateTime__c )</errorConditionFormula>
    <errorMessage>The Follow Up Date must be later than the Close Date. Select a new Follow Up Date.</errorMessage>
</ValidationRule>