force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Not_allow_Request_Definition_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Not_allow_Request_Definition_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ,      NOT(ISNULL(BMCServiceDesk__FKRequestDefinition__c )) , NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )),NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )) ,(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c)  &lt;&gt; BMCServiceDesk__FKRequestDefinition__c))  ||  AND(NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )) ,      NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )),NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDetail__c) )) ,      NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDetail__c) )) ,OR(ISNULL(BMCServiceDesk__FKRequestDefinition__c ) , ISBLANK( BMCServiceDesk__FKRequestDefinition__c)) )</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__FKRequestDefinition__c</errorDisplayField>
    <errorMessage>You can not edit Request Definition.</errorMessage>
</ValidationRule>