force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Select_Category_or_template_or_req_def.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Select_Category_or_template_or_req_def</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(BMCServiceDesk__contactType__c,&apos;&apos;),  ISBLANK( BMCServiceDesk__FKCategory__c ) , ISBLANK( BMCServiceDesk__FKRequestDefinition__c ) , ISBLANK( BMCServiceDesk__FKTemplate__c ) )</errorConditionFormula>
    <errorMessage>To save the incident, select a value in any one of the following fields: Category, Template, or Request Definition.</errorMessage>
</ValidationRule>