force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCServiceDesk__Select_Either_User_Lead_or_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Select_Either_User_Lead_or_Contact</fullName>
    <active>false</active>
    <description>Allow to select Either User, Lead or Contact. And the Client type changes accordingly.</description>
    <errorConditionFormula>IF(((BMCServiceDesk__FKClient__c != NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
			(BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c != NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
			(BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c != NULL)) , 
			false, true)</errorConditionFormula>
    <errorMessage>To save the incident, select a value in any one of the following fields: Client ID, Contact or Lead.</errorMessage>
</ValidationRule>