force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Category_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_required_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      BMCServiceDesk__Status_ID__c  = &quot;8 - RESOLVED&quot;,
      BMCServiceDesk__state__c  = False
   ), 
    ISBLANK(  BMCServiceDesk__FKCategory__c ) ,
    BMCServiceDesk__isServiceRequest__c  = False
)</errorConditionFormula>
    <errorMessage>Please enter a Category.</errorMessage>
</ValidationRule>