force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/CLOSED_status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>CLOSED_status_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
BMCServiceDesk__Status_ID__c=&quot;2 - ASSIGNED&quot;, 
BMCServiceDesk__Status_ID__c=&quot;3 – IN PROGRESS&quot;, 
BMCServiceDesk__Status_ID__c=&quot;4 – WAITING FOR CLIENT&quot;, 
BMCServiceDesk__Status_ID__c=&quot;5 - WAITING FOR 3RD PARTY&quot;, 
BMCServiceDesk__Status_ID__c=&quot;6 - WAITING FOR APPROVAL&quot;,
BMCServiceDesk__Status_ID__c=&quot;7 – ON HOLD&quot;,
BMCServiceDesk__Status_ID__c=&quot;8 - RESOLVED&quot;, 
BMCServiceDesk__Status_ID__c=&quot;9 – APPROVED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CANCELLED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED/NO CONTACT&quot;,
BMCServiceDesk__Status_ID__c=&quot;REJECTED&quot;),
PRIORVALUE( BMCServiceDesk__Status_ID__c )=&quot;CLOSED&quot; 
)</errorConditionFormula>
    <errorMessage>1-NEW is the only status change permitted from CLOSED.</errorMessage>
</ValidationRule>