force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/IN_PROGRESS_status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>IN_PROGRESS_status_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
BMCServiceDesk__Status_ID__c=&quot;1 - NEW&quot;, 
BMCServiceDesk__Status_ID__c=&quot;9 – APPROVED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED/NO CONTACT&quot;,
BMCServiceDesk__Status_ID__c=&quot;REJECTED&quot;),
PRIORVALUE( BMCServiceDesk__Status_ID__c )=&quot;3 – IN PROGRESS&quot; 
)</errorConditionFormula>
    <errorMessage>2 - ASSIGNED, 4 – WAITING FOR CLIENT, 5 - WAITING FOR 3RD PARTY, 7 – ON HOLD, 8 - RESOLVED, CANCELLED, or CLOSED are the only allowable status changes from 3 – IN PROGRESS.</errorMessage>
</ValidationRule>