force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/NEW_status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>NEW_status_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
BMCServiceDesk__Status_ID__c=&quot;7 – ON HOLD&quot;, 
BMCServiceDesk__Status_ID__c=&quot;4 – WAITING FOR CLIENT&quot;, 
BMCServiceDesk__Status_ID__c=&quot;5 - WAITING FOR 3RD PARTY&quot;, 
BMCServiceDesk__Status_ID__c=&quot;8 - RESOLVED&quot;, 
BMCServiceDesk__Status_ID__c=&quot;9 – APPROVED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED&quot;,
BMCServiceDesk__Status_ID__c=&quot;CLOSED/NO CONTACT&quot;,
BMCServiceDesk__Status_ID__c=&quot;REJECTED&quot;),
PRIORVALUE( BMCServiceDesk__Status_ID__c )=&quot;1 - NEW&quot;,
$User.BMCServiceDesk__IsStaffUser__c = False
)</errorConditionFormula>
    <errorMessage>2 - ASSIGNED, 3 – IN PROGRESS, OR CANCELLED are the only allowable status changes from 1 - NEW.</errorMessage>
</ValidationRule>