force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/On_Hold_Reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Reason_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    BMCServiceDesk__Status_ID__c = &quot;7 – ON HOLD&quot;,
    ISBLANK( On_Hold_Reason__c ) 
)</errorConditionFormula>
    <errorMessage>Please enter an &quot;On Hold&quot; Reason.</errorMessage>
</ValidationRule>