force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Queue_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Queue_is_Required</fullName>
    <active>true</active>
    <description>Queue field should not be blank</description>
    <errorConditionFormula>ISBLANK( BMCServiceDesk__Queue__c)</errorConditionFormula>
    <errorMessage>Queue should not be Blank</errorMessage>
</ValidationRule>