force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Queue_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Queue_required_rule</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( BMCServiceDesk__Queue__c )</errorConditionFormula>
    <errorMessage>Please select a Queue.</errorMessage>
</ValidationRule>