force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Resolution_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_required_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      BMCServiceDesk__Status_ID__c  = &quot;8 - RESOLVED&quot;,
      BMCServiceDesk__state__c  = False
   ), 
    ISBLANK( BMCServiceDesk__incidentResolution__c )
   
)</errorConditionFormula>
    <errorMessage>Please enter a Resolution.</errorMessage>
</ValidationRule>